--- a/App.xaml
+++ b/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:NoteApplication"
-             StartupUri="View/NotesWindow.xaml">
+             StartupUri="View/NewNotesWindow.xaml">
     <Application.Resources>
 
         <Style x:Key="MyWaterMarkStyle" TargetType="{x:Type TextBox}">
