--- a/View/NewNotesWindow.xaml
+++ b/View/NewNotesWindow.xaml
@@ -6,6 +6,8 @@
         xmlns:local="clr-namespace:NoteApplication.View" 
         xmlns:vm="clr-namespace:NoteApplication.ViewModel" 
         xmlns:vm1="clr-namespace:NotesApplication.ViewModel" 
+                xmlns:toolkit="http://schemas.xceed.com/wpf/xaml/toolkit"
+
         xmlns:help="clr-namespace:NoteApplication.ViewModel.Helpers" 
         xmlns:uc="clr-namespace:NoteApplication.View.UserControls"
         mc:Ignorable="d"
@@ -16,6 +18,65 @@
         <vm:TextEditorViewModel x:Key="tvm"/>
         <vm1:WeatherViewModel x:Key="wvm"/>
         <help:DataBaseHelper x:Key="help"/>
+        <Storyboard x:Key="SearchingForCityWeather">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="stackPanel" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleY)">
+                <EasingDoubleKeyFrame KeyTime="00:00:00.3000000" Value="0.741"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="stackPanel" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)">
+                <EasingDoubleKeyFrame KeyTime="00:00:00.3000000" Value="-50.208"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="WeatherStackPanel" Storyboard.TargetProperty="(FrameworkElement.Height)">
+                <EasingDoubleKeyFrame KeyTime="00:00:00.3000000" Value="300"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="WeatherStackPanel" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)">
+                <EasingDoubleKeyFrame KeyTime="00:00:00.3000000" Value="2.286">
+                    <EasingDoubleKeyFrame.EasingFunction>
+                        <CubicEase EasingMode="EaseIn"/>
+                    </EasingDoubleKeyFrame.EasingFunction>
+                </EasingDoubleKeyFrame>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="WeatherStackPanel" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)">
+                <EasingDoubleKeyFrame KeyTime="00:00:00.3000000" Value="-165.714">
+                    <EasingDoubleKeyFrame.EasingFunction>
+                        <CubicEase EasingMode="EaseIn"/>
+                    </EasingDoubleKeyFrame.EasingFunction>
+                </EasingDoubleKeyFrame>
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+        <Storyboard x:Key="SearchingForCityWeather_Copy1">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="stackPanel" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleY)">
+                <EasingDoubleKeyFrame KeyTime="00:00:00" Value="0.741"/>
+                <EasingDoubleKeyFrame KeyTime="00:00:00.3000000" Value="0.996"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="stackPanel" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)">
+                <EasingDoubleKeyFrame KeyTime="00:00:00" Value="-50.208"/>
+                <EasingDoubleKeyFrame KeyTime="00:00:00.3000000" Value="-1.065"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="WeatherStackPanel" Storyboard.TargetProperty="(FrameworkElement.Height)">
+                <EasingDoubleKeyFrame KeyTime="00:00:00" Value="300"/>
+                <EasingDoubleKeyFrame KeyTime="00:00:00.3000000" Value="140"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="WeatherStackPanel" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)">
+                <EasingDoubleKeyFrame KeyTime="00:00:00" Value="2.286">
+                    <EasingDoubleKeyFrame.EasingFunction>
+                        <CubicEase EasingMode="EaseIn"/>
+                    </EasingDoubleKeyFrame.EasingFunction>
+                </EasingDoubleKeyFrame>
+                <EasingDoubleKeyFrame KeyTime="00:00:00.3000000" Value="-1.143"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="WeatherStackPanel" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)">
+                <EasingDoubleKeyFrame KeyTime="00:00:00" Value="-165.714">
+                    <EasingDoubleKeyFrame.EasingFunction>
+                        <CubicEase EasingMode="EaseIn"/>
+                    </EasingDoubleKeyFrame.EasingFunction>
+                </EasingDoubleKeyFrame>
+                <EasingDoubleKeyFrame KeyTime="00:00:00.3000000" Value="-1.143"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="stackPanel" Storyboard.TargetProperty="(FrameworkElement.Height)">
+                <EasingDoubleKeyFrame KeyTime="00:00:00" Value="390"/>
+                <EasingDoubleKeyFrame KeyTime="00:00:00.3000000" Value="385"/>
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
     </Window.Resources>
     <Grid DataContext="{StaticResource vm}">
         <Rectangle HorizontalAlignment="Left" Height="67" Margin="200,657,0,0" VerticalAlignment="Top" Width="59" Fill="#FFFFFCE6"/>
@@ -34,15 +95,17 @@
         <Grid HorizontalAlignment="Left" Height="704" VerticalAlignment="Center" Width="200">
             <StackPanel HorizontalAlignment="Left" Height="391" Margin="10,100,0,0" VerticalAlignment="Top" Width="205">
                 <ListView 
+                      ItemContainerStyle="{DynamicResource _ListBoxItemStyle}"
                       Background="{x:Null}"
                       Width="222"
                       SelectedValue="{Binding SelectedNotebook, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                      ItemsSource="{Binding Notebooks}" Height="437" BorderBrush="{x:Null}">
+                      ItemsSource="{Binding Notebooks}" Height="390" BorderBrush="{x:Null}">
 
-                    <ListView.ItemTemplate>
+                    <ListView.ItemTemplate >
                         <DataTemplate>
                             <Grid>
                                 <uc:DisplayNotebook NotebookDep="{Binding}">
+
                                     <uc:DisplayNotebook.ContextMenu>
                                         <ContextMenu>
                                             <MenuItem Header="Rename notebook"
@@ -78,9 +141,37 @@
                 <TextBlock HorizontalAlignment="Left" Height="45" TextWrapping="Wrap" VerticalAlignment="Top" Width="183" TextAlignment="Center" Foreground="#FFCD216F" FontSize="20" Margin="12,3,0,0"><Run Text="Your Notebooks"/><LineBreak/><Run/></TextBlock>
             </Grid>
         </Grid>
-        <Rectangle HorizontalAlignment="Left" Height="704" Margin="230,0,0,0" VerticalAlignment="Center" Width="230" RadiusX="30" RadiusY="30"/>
-        <Grid HorizontalAlignment="Left" Height="704" Margin="234,0,0,0" VerticalAlignment="Center" Width="226">
-            <StackPanel HorizontalAlignment="Center" Height="391" Margin="0,106,0,0" VerticalAlignment="Top" Width="205">
+        <Rectangle HorizontalAlignment="Left" Height="704" Margin="230,0,0,0" VerticalAlignment="Center" Width="250" RadiusX="30" RadiusY="30"/>
+        <Grid HorizontalAlignment="Left" Height="704" Margin="234,0,0,0" VerticalAlignment="Center" Width="250">
+            <StackPanel x:Name="WeatherStackPanel" HorizontalAlignment="Center" Height="140" Margin="0,565,0,0" VerticalAlignment="Top" Width="250" RenderTransformOrigin="0.5,0.5">
+                <StackPanel.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </StackPanel.RenderTransform>
+                <uc:WeatherUserControl Height="288" RenderTransformOrigin="0.5,0.5">
+                    <uc:WeatherUserControl.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform ScaleY="1.004"/>
+                            <SkewTransform/>
+                            <RotateTransform/>
+                            <TranslateTransform Y="-0.571"/>
+                        </TransformGroup>
+                    </uc:WeatherUserControl.RenderTransform>
+                </uc:WeatherUserControl>
+            </StackPanel>
+            <StackPanel x:Name="stackPanel" HorizontalAlignment="Center" Height="390" Margin="0,106,0,0" VerticalAlignment="Top" Width="205" RenderTransformOrigin="0.5,0.5">
+                <StackPanel.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </StackPanel.RenderTransform>
                 <ListView DockPanel.Dock="Left"
                   SelectedValue="{Binding SelectedNote, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                   ItemsSource="{Binding Notes}"
@@ -89,7 +180,7 @@
                         <DataTemplate>
                             <Grid>
                                 <uc:DisplayNote NoteDep="{Binding}"
-                                            Width="{Binding ElementName=Container,Path=ActualWidth}"
+                                            Width="{Binding ActualWidth, ElementName=Container}"
                                             HorizontalAlignment="Left" 
                                             MaxWidth="180">
                                     <uc:DisplayNote.ContextMenu>
@@ -109,6 +200,82 @@
                 </ListView>
             </StackPanel>
         </Grid>
+        <StackPanel HorizontalAlignment="Left" Height="528" Margin="550,139,0,0" VerticalAlignment="Top" Width="686">
+            <Grid Height="82">
+                <Rectangle RadiusX="12.571" RadiusY="12.571" Margin="0,41,0,0">
+                    <Rectangle.Fill>
+                        <LinearGradientBrush EndPoint="0.8,0" StartPoint="0.5,0">
+                            <GradientStop Color="#FF650C46" Offset="1"/>
+                            <GradientStop Color="#FFFB3D3D"/>
+                        </LinearGradientBrush>
+                    </Rectangle.Fill>
+                </Rectangle>
+                <ToolBarTray Panel.ZIndex="70" Background="{x:Null}" Margin="0,41,0,0">
+                    <ToolBar Background="{x:Null}" Foreground="{x:Null}" Margin="0,0,0,-38" Width="483">
+                        <Button x:Name="SpeechButton"
+                            Content="Speech"
+                            Click="SpeechButton_Click" Margin="0,0,10,0"/>
+                        <ToggleButton x:Name="BoldButton"
+                            Click="BoldButton_Click" Margin="0,0,10,0">
+                            <TextBlock Text="B"
+                                FontWeight="Bold"/>
+                        </ToggleButton>
+                        <ToggleButton x:Name="ItalicButton"
+                            Click="ItalicButton_Click" Background="{x:Null}" Margin="0,0,10,0">
+                            <TextBlock Text="I"
+                                FontStyle="Italic"/>
+                        </ToggleButton>
+                        <ToggleButton x:Name="UnderlineButton"
+                            Click="UnderlineButton_Click"
+                            Command="" Margin="0,0,10,0">
+                            <TextBlock Text="U"/>
+                        </ToggleButton>
+                        <ComboBox x:Name="fontFamilyComboBox"
+                            Width="100"
+                            SelectionChanged="fontFamilyComboBox_SelectionChanged"
+                            Text="{Binding LastUsedFont}" Margin="10,0,10,0"/>
+                        <ComboBox x:Name="fontSizeComboBox"
+                            Width="50"
+                            IsEditable="True"
+                            TextBoxBase.TextChanged="fontSizeComboBox_TextChanged"
+                            Text="{Binding LastUsedFontSize}" Margin="20,0,20,0"/>
+                        <Button x:Name="SaveButton"
+                            Content="Save"
+                            Click="SaveButton_ClickAsync" Margin="10,0,10,0"/>
+                        <Button
+                            Content="Delete"
+                            Command="{Binding DeleteCommandNote}"
+                            CommandParameter="{Binding SelectedNote}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+                    </ToolBar>
+                </ToolBarTray>
+            </Grid>
+            <Grid Height="442">
+                <toolkit:RichTextBox x:Name="contentRichTextBox"
+                         TextChanged="contentRichTextBox_TextChanged"
+                         SelectionChanged="contentRichTextBox_SelectionChanged" Background="{x:Null}" BorderBrush="{x:Null}" Margin="0,0,0,10">
+                    <toolkit:RichTextBox.TextFormatter>
+                        <toolkit:RtfFormatter />
+                    </toolkit:RichTextBox.TextFormatter>
+                </toolkit:RichTextBox>
+                <Border BorderThickness="4,0,4,4" Margin="0,0,0,10" CornerRadius="20,20,20,20" Width="686" FlowDirection="LeftToRight">
+                    <Border.BorderBrush>
+                        <LinearGradientBrush EndPoint="0,0.5" StartPoint="0.5,0">
+                            <LinearGradientBrush.Transform>
+                                <TransformGroup>
+                                    <ScaleTransform/>
+                                    <SkewTransform/>
+                                    <RotateTransform Angle="0"/>
+                                    <TranslateTransform/>
+                                </TransformGroup>
+                            </LinearGradientBrush.Transform>
+                            <GradientStop Color="#FF650C46"/>
+                            <GradientStop Color="#FFEF393E" Offset="1"/>
+                        </LinearGradientBrush>
+                    </Border.BorderBrush>
+                </Border>
+            </Grid>
+        </StackPanel>
+        <TextBlock x:Name="statusTextBlock" HorizontalAlignment="Left" Height="47" Margin="566,631,0,0" Text="TextBlock" TextWrapping="Wrap" VerticalAlignment="Top" Width="74"/>
 
     </Grid>
 </Window>
